--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # following adds to lizi
   path_provider: ^1.2.0
   http: ^0.12.0+2
+  # chewie: ^0.9.7
 
 dev_dependencies:
   flutter_test:
