--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   path_provider: ^1.2.0
   http: ^0.12.0+2
   html: ^0.14.0+2
-  # chewie: ^0.9.7
+  chewie: ^0.9.7
   # flutter_liquidcore: ^0.6.0+1
   # webview_flutter: ^0.3.13
   
